localWeather/style.css
body {
	margin: 0;
    min-height: 100vh;
	background:
      linear-gradient(45deg, hsla(340, 100%, 55%, 1) 0%, hsla(340, 100%, 55%, 0) 70%),
      linear-gradient(135deg, hsla(225, 95%, 50%, 1) 10%, hsla(225, 95%, 50%, 0) 80%),
      linear-gradient(225deg, hsla(140, 90%, 50%, 1) 10%, hsla(140, 90%, 50%, 0) 80%),
      linear-gradient(315deg, hsla(35, 95%, 55%, 1) 100%, hsla(35, 95%, 55%, 0) 70%);
}

h1, h5 {
	margin: 10px auto;
	color: #F8F8F8;
	text-align: center;
}

li {
	font-size: 1.25rem;
}

#query {
    width: 300px;
}

@media (min-width: 1200px) {
    .container{
        max-width: 970px;
    }
}

